assets/prometheus-k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  name: prometheus-access
  namespace: openshift-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus  # Label must match your Prometheus pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow access to ports 9091(svc port)/9092(metrics port)
  - ports:
    - port: 9091
      protocol: TCP
    - port: 9092
      protocol: TCP
 # grpc port 10901
    - port: 10901
      protocol: TCP
 # thanos-proxy port 10903 for prometheus thanos-sidecar target
    - port: 10903
      protocol: TCP
 # allow to access targert port to check target health and scrape from target
  egress:
  - {}
